fix: mejora de letras, contraste, colores para hacerlo mas agradable y facil de utilizar

--- a/src/app/features/landlord/components/accommodation-form/accommodation-form.component.css
+++ b/src/app/features/landlord/components/accommodation-form/accommodation-form.component.css
@@ -122,6 +122,7 @@
   border-radius: 6px;
   cursor: pointer;
   transition: all 0.2s;
+  color:#000;
 }
 
 .checkbox-label:hover {
@@ -139,6 +140,7 @@
   width: 18px;
   height: 18px;
   cursor: pointer;
+
 }
 
 /* Image Upload */
